Move TildeMTAPI to CompletableFuture. Some refactoring about actions. Add domain dropdown.